5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1671_1105.log
== SUBMITION (2019-04-29 13:43:40) 
-- CODE:
n=input("Descricao do brasao:"))
print("Entrada:",n)

if(n=="lobo"):
	print("Casa:","Stark")
elif(n=="leao"):
	print("Casa:", "Lannister")
elif(n=="veado"):
	print("Casa:", "Baratheon")
elif(n=="dragao"):
	print("Casa:", "Targaryen")
elif(n=="rosa"):
	print("Casa:", "Tyrell")
elif(n=="sol"):
	print("Casa:", "Martell")
elif(n=="lula"):
	print("Casa:", "greyjoy")
elif(n=="esfolado"):
	print("Casa:", "Bolton")
elif(n=="turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.173966
-- ERROR:
  File "/home/codebench/codes/1671/1105/main.py", line 1
    n=input())
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:44:41) 
-- CODE:
n=input("Descricao do brasao:"))
print("Entrada:",n)

if(n=="lobo"):
	print("Casa:","Stark")
elif(n=="leao"):
	print("Casa:", "Lannister")
elif(n=="veado"):
	print("Casa:", "Baratheon")
elif(n=="dragao"):
	print("Casa:", "Targaryen")
elif(n=="rosa"):
	print("Casa:", "Tyrell")
elif(n=="sol"):
	print("Casa:", "Martell")
elif(n=="lula"):
	print("Casa:", "greyjoy")
elif(n=="esfolado"):
	print("Casa:", "Bolton")
elif(n=="turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- ERROR:
File "XXXX", line 1
    n=input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:45:28) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n=="lobo"):
	print("Casa:","Stark")
elif(n=="leao"):
	print("Casa:", "Lannister")
elif(n=="veado"):
	print("Casa:", "Baratheon")
elif(n=="dragao"):
	print("Casa:", "Targaryen")
elif(n=="rosa"):
	print("Casa:", "Tyrell")
elif(n=="sol"):
	print("Casa:", "Martell")
elif(n=="lula"):
	print("Casa:", "greyjoy")
elif(n=="esfolado"):
	print("Casa:", "Bolton")
elif(n=="turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.205565
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:45:31) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n=="lobo"):
	print("Casa:","Stark")
elif(n=="leao"):
	print("Casa:", "Lannister")
elif(n=="veado"):
	print("Casa:", "Baratheon")
elif(n=="dragao"):
	print("Casa:", "Targaryen")
elif(n=="rosa"):
	print("Casa:", "Tyrell")
elif(n=="sol"):
	print("Casa:", "Martell")
elif(n=="lula"):
	print("Casa:", "greyjoy")
elif(n=="esfolado"):
	print("Casa:", "Bolton")
elif(n=="turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:45:46) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n=="lobo"):
	print("Casa:","Stark")
elif(n=="leao"):
	print("Casa:", "Lannister")
elif(n=="veado"):
	print("Casa:", "Baratheon")
elif(n=="dragao"):
	print("Casa:", "Targaryen")
elif(n=="rosa"):
	print("Casa:", "Tyrell")
elif(n=="sol"):
	print("Casa:", "Martell")
elif(n=="lula"):
	print("Casa:", "greyjoy")
elif(n=="esfolado"):
	print("Casa:", "Bolton")
elif(n=="turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.16861
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:45:58) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n=="lobo"):
	print("Casa:","Stark")
elif(n=="leao"):
	print("Casa:", "Lannister")
elif(n=="veado"):
	print("Casa:", "Baratheon")
elif(n=="dragao"):
	print("Casa:", "Targaryen")
elif(n=="rosa"):
	print("Casa:", "Tyrell")
elif(n=="sol"):
	print("Casa:", "Martell")
elif(n=="lula"):
	print("Casa:", "greyjoy")
elif(n=="esfolado"):
	print("Casa:", "Bolton")
elif(n=="turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.223166
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:47:38) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n== "lobo"):
	print("Casa:","Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.123691
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:47:54) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n== "lobo"):
	print("Casa:","Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:48:30) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n== "lobo"):
	print("Casa:","Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turfa"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.163607
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:48:59) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n== "lobo"):
	print("Casa:","Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.128479
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:49:02) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n== "lobo"):
	print("Casa:","Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.122394
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:50:08) 
-- CODE:
n=input("Descricao do brasao:")
print("Entrada:",n)

if(n== "lobo"):
	print("Casa:","Stark")
elif(n== "leao"):
	print("Casa:", "Lannister")
elif(n== "veado"):
	print("Casa:", "Baratheon")
elif(n== "dragao"):
	print("Casa:", "Targaryen")
elif(n== "rosa"):
	print("Casa:", "Tyrell")
elif(n== "sol"):
	print("Casa:", "Martell")
elif(n== "lula"):
	print("Casa:", "Greyjoy")
elif(n== "esfolado"):
	print("Casa:", "Bolton")
elif(n== "turta"):
	print("Casa:", "Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.186731
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
